add missing colors

--- a/assets/stylesheets/better/variables/_color.scss
+++ b/assets/stylesheets/better/variables/_color.scss
@@ -7,6 +7,14 @@ $text-gray-light:         rgba(0,0,0, .30)        !default;
 $text-white:              rgba(255,255,255, .90)  !default;
 $text-white-light:        rgba(255,255,255, .70)  !default;
 
+// remove twbs colors
+
+$gray-dark:               #292b2c                 !default;
+$gray:                    #464a4c                 !default;
+$gray-light:              #636c72                 !default;
+$gray-lighter:            #eceeef                 !default;
+$gray-lightest:           #f7f7f9                 !default;
+
 
 $brand:                   #a0c775                 !default;
 
