--- a/assets/stylesheets/better_styles.scss
+++ b/assets/stylesheets/better_styles.scss
@@ -1,4 +1,4 @@
-@import "bootstrap";
+// @import "bootstrap";
 
 
 // import variables:
@@ -27,6 +27,8 @@
 @import "better/content/helpers";
 @import "better/content/pix";
 @import "better/content/typography";
+@import "better/content/buttons";
+@import "better/content/check_switch";
 
 
 // import navigations:
