--- a/assets/stylesheets/better/variables/_color.scss
+++ b/assets/stylesheets/better/variables/_color.scss
@@ -14,6 +14,8 @@ $gray:                    #464a4c                 !default;
 $gray-light:              #636c72                 !default;
 $gray-lighter:            #eceeef                 !default;
 $gray-lightest:           #f7f7f9                 !default;
+$black:                   #1c1c1c                 !default;
+$white:                   #ffffff                 !default;
 
 
 $brand:                   #a0c775                 !default;
