--- a/assets/stylesheets/better/templates/_fixed_aside_to_header.scss
+++ b/assets/stylesheets/better/templates/_fixed_aside_to_header.scss
@@ -37,7 +37,7 @@ body {
     
     transform: translate(-220px,0) ;
     
-    @include transition (all 0.5s ease-in-out);
+    transition: all 0.5s ease-in-out;
     @include asideScrollBar;
 }
 
